# parserbackup

./: README.md  compile.txt  linux.sh  windows.ps1
Software/: CMakeLists.txt  MYNMEAParser.cpp  MYNMEAParser.h  NMEAParserPacket.cpp  NMEAParserPacket.h  NMEASentenceGGA.h  NMEASentenceGPS.cpp  NMEASentenceSTS.cpp  NMEASentenceVEL.cpp  NMEASentenceVEL.h  ceSerial.cpp  ceSerial.h  flashdata.json  gpsdata.csv  main.cpp  outfile.csv  parser
Software/lib/: CMakeLists.txt  NMEAParser.cpp  NMEAParser.h  NMEAParserData.h  NMEASentenceATT.cpp  NMEASentenceATT.h  NMEASentenceBase.cpp  NMEASentenceBase.h  NMEASentenceGGA.cpp  NMEASentenceGPS.h  NMEASentenceRMC.cpp  NMEASentenceRMC.h  NMEASentenceSEN.cpp  NMEASentenceSEN.h  NMEASentenceSTS.h  ceSerial.h
Software/olddata/: flashdata.json  gpsdata.csv  outfile.csv  parser
Software/script/: compile.txt  windows.ps1
Software/source/: CMakeLists.txt  MYNMEAParser.cpp  MYNMEAParser.h  main.cpp
